syntax = "proto3";

package api.requestEth.v1;

import "google/api/annotations.proto";

option go_package = "requestEth/api/requestEth/v1;v1";
option java_multiple_files = true;
option java_package = "dev.kratos.api.helloworld.v1";
option java_outer_classname = "HelloworldProtoV1";

service Transaction {
  rpc SendTransaction (SendTransactionRequest) returns (SendTransactionReply) {
    option (google.api.http) = {
      post: "/api/transaction"
      body: "send_body"
    };
  }

  rpc SendTransactionEth (SendTransactionEthRequest) returns (SendTransactionEthReply) {
    option (google.api.http) = {
      post: "/api/transaction_eth"
      body: "send_body"
    };
  }

  rpc Transaction (TransactionRequest) returns (TransactionReply) {
    option (google.api.http) = {
      get: "/api/transaction/{tx}"
    };
  }

  rpc EthBalance (EthBalanceRequest) returns (EthBalanceReply) {
    option (google.api.http) = {
      get: "/api/eth_balance"
    };
  }

  rpc GenerateKey (GenerateKeyRequest) returns (GenerateKeyReply) {
    option (google.api.http) = {
      get: "/api/generate_key"
    };
  }

  rpc UsdtBalance (UsdtBalanceRequest) returns (UsdtBalanceReply) {
    option (google.api.http) = {
      get: "/api/usdt_balance"
    };
  }

  rpc UsdtBalanceBiw (UsdtBalanceBiwRequest) returns (UsdtBalanceBiwReply) {
    option (google.api.http) = {
      get: "/api/usdt_balance_biw"
    };
  }
}

message UsdtBalanceRequest {
  string address = 1;
}

message UsdtBalanceReply {
  string balance = 1;
  string err = 2;
}

message UsdtBalanceBiwRequest {
  string address = 1;
}

message UsdtBalanceBiwReply {
  string balance = 1;
  string err = 2;
}

message SendTransactionRequest {
  message SendBody{
    string privateKey = 1;
    string toAddr = 2;
    string amount = 3;
  }

  SendBody send_body = 1;
}

message SendTransactionReply {
  string tx = 1;
  string err = 2;
}

message SendTransactionEthRequest {
  message SendBody{
    string privateKey = 1;
    string toAddr = 2;
    string amount = 3;
  }

  SendBody send_body = 1;
}

message SendTransactionEthReply {
  string tx = 1;
  string err = 2;
}

message EthBalanceRequest {
  string address = 1;
}

message EthBalanceReply {
  string balance = 1;
  string err = 2;
}


message TransactionRequest {
  string tx = 1;
}

message TransactionReply {
  uint64 status = 1;
}

message GenerateKeyRequest {
}

message GenerateKeyReply {
  string address = 1;
  string privateKey = 2;
  string err = 3;
}